arreglamos errores